# neuralforecast

./: .all-contributorsrc  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  aggregate_wiki.ipynb  analyze_transfer.ipynb  auto.mdx  common.base_auto.html  common.base_auto.html.mdx  common.base_model.html  common.base_model.mdx  common.base_multivariate.html  common.base_multivariate.html.mdx  common.base_recurrent.html  common.base_recurrent.html.mdx  common.base_windows.html  common.base_windows.html.mdx  common.enums.mdx  common.mdx  common.model_checks.html  common.model_checks.html.mdx  common.modules.html  common.modules.html.mdx  common.scalers.html  common.scalers.html.mdx  compat.html  compat.mdx  config.html  config.py  config_models.py  config_timenet.py  (+163 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.examples/: back.py  notes.md  shap_deep_explainer.py  shap_explainer.py
.github/: dependabot.yml  release-drafter.yml
action_files/: comment_reports.py  environment.yml  imports_with_code.py  prof-env.yml  prof.py  test_nbs.py
docs/: Gemfile  _config.yml  auto.html  common.base_auto.html.md  common.modules.html.md  common.scalers.html.md  convert_to_mkdocstrings.py  core.html.md  data__hiertsdataset.html  data__scalers.html  data__tsdataset.html  data__tsloader.html  data__tsloader_fast.html  data__tsloader_general.html  data__utils.html  data_dataset__plots.html  data_datasets__business.html  data_datasets__ecl.html  data_datasets__epf.html  data_datasets__ett.html  data_datasets__favorita.html  data_datasets__gefcom2012.html  data_datasets__gefcom2014.html  data_datasets__long_horizon.html  data_datasets__m3.html  data_datasets__m4.html  data_datasets__m5.html  data_datasets__plots.html  data_datasets__tourism.html  data_datasets__tourismL.html  data_datasets__utils.html  data_datasets__wth.html  dataloaders.html  dataset_class.html  datasets.html  datasets_epf.html  datasets_m3.html  datasets_tourism.html  datasets_utils.html  (+111 more)
(+855 files in other folders)
